done with portfolio and rating

--- a/vstech-new-html/index-5-dark.html
+++ b/vstech-new-html/index-5-dark.html
@@ -116,7 +116,7 @@
 					<li><a href="{{ about.twitter|default:'https://twitter.com/vstech_ltd' }}"><span class="fab fa-twitter"></span></a></li>
 					<li><a href="{{ about.facebook|default:'https://fb.com' }}"><span class="fab fa-facebook-square"></span></a></li>
 					<li><a href="{{ about.linkedin|default:'https://linkedin.com/company/vstech-ltd/' }}"><span class="fab fa-linkedin"></span></a></li>
-					<li><a href="{{ about.instagram|default:'https://instagram.com/vstech_ltd/' }}"><span class="fab fa-instagram"></span></a></li>
+					<li><a href="{{ about.youtube|default:'https://www.youtube.com/channel/UCkedAOBJuj9d0cvTKFzWqmA?sub_confirmation=1' }}"><span class="fab fa-youtube"></span></a></li>
 				</ul>
 			</nav>
 		</div><!-- End Mobile Menu -->
