--- a/vstech-new-html/index-1-dark.html
+++ b/vstech-new-html/index-1-dark.html
@@ -42,7 +42,7 @@
 					<!-- Info List -->
 					<ul class="list-style-one">
 						<li><i class="fa fa-envelope"></i> <a href="mailto:{{ about.email|default:'o.jeff3.a@gmail.com' }}">{{ about.email|default:'o.jeff3.a@gmail.com' }}</a></li>
-						<li><i class="fa fa-map-marker"></i> 88 Broklyn Golden Street. New York</li>
+						<li><i class="fa fa-map-marker"></i> {{ about.address|default:'Ibrahim Shopping Mall, Moi Avenue, Nairobi' }} New York</li>
 					</ul>
 				</div>
 
@@ -592,7 +592,7 @@
 							<figure class="image"><img src="/static/images/resource/image-3.jpg" alt=""></figure>
 							<div class="caption-box wow slideInRight">
 								<div class="icon-box">
-									<a href="https://www.youtube.com/watch?v=Fvae8nxzVz4" class="play-now-two lightbox-image"><i class="icon fa fa-play"></i></a>
+									<a href="https://youtu.be/Oz-SvGZsTNc" class="play-now-two lightbox-image"><i class="icon fa fa-play"></i></a>
 								</div>
 								<div class="title-box">
 									<h5 class="title">Professional IT technology services you can trust</h5>
@@ -701,7 +701,7 @@
 	<section class="testimonial-section">
 		<div class="auto-container">
 			<div class="sec-title">
-				<span class="sub-title">Our feedbakcs</span>
+				<span class="sub-title">Our feedbacks</span>
 				<h2>What They’re Talking<br> About Company</h2>
 			</div>
 			<div class="testimonials">
@@ -847,7 +847,7 @@
 		</div>
 		<div class="auto-container">
 			<div class="sec-title text-center">
-				<span class="sub-title">Our feedbakcs</span>
+				<span class="sub-title">Our feedbacks</span>
 				<h2>EXPERTS READY TO SURVE</h2>
 			</div>
 
@@ -1273,7 +1273,7 @@
 						<div class="footer-widget contact-widget">
 							<h3 class="widget-title">Contact</h3>
 							<div class="widget-content">
-								<div class="text">{{ about.address|default:'52106 00100 Nairobi' }}</div>
+								<div class="text">{{ about.address|default:'Ibrahim Shopping Mall, Moi Avenue, Nairobi' }}</div>
 								<ul class="contact-info">
 									<li><i class="fa fa-envelope"></i> <a href="mailto:{{ about.email|default:'o.jeff3.a@gmail.com' }}">{{ about.email|default:'o.jeff3.a@gmail.com' }}</a><br></li>
 									<li><i class="fa fa-phone-square"></i> <a href="tel:{{ about.phone_number|default:'+254795067776' }}">{{ about.phone_number|default:'+254795067776' }}</a><br></li>
