--- a/vstech-new-html/home-app-landing3.html
+++ b/vstech-new-html/home-app-landing3.html
@@ -359,7 +359,7 @@
 				<div class="video-box wow slideInUp">
 					<div class="video-box-inner">
 						<div class="content">
-							<a href="https://www.youtube.com/watch?v=Fvae8nxzVz4" class="play-btn lightbox-image"><i class="icon fa fa-play"></i></a>
+							<a href="https://youtu.be/Oz-SvGZsTNc" class="play-btn lightbox-image"><i class="icon fa fa-play"></i></a>
 						</div>
 					</div>
 				</div>
@@ -748,7 +748,7 @@
 						<div class="footer-widget contact-widget-app">
 							<h3 class="widget-title">Contact</h3>
 							<div class="widget-content">
-								<div class="text">{{ about.address|default:'52106 00100 Nairobi' }}</div>
+								<div class="text">{{ about.address|default:'Ibrahim Shopping Mall, Moi Avenue, Nairobi' }}</div>
 								<ul class="contact-info">
 									<li><i class="fa fa-envelope"></i> <a href="mailto:{{ about.email|default:'o.jeff3.a@gmail.com' }}">{{ about.email|default:'o.jeff3.a@gmail.com' }}</a><br></li>
 									<li><i class="fa fa-phone-square"></i> <a href="tel:{{ about.phone_number|default:'+254795067776' }}">{{ about.phone_number|default:'+254795067776' }}</a><br></li>
