--- a/vstech-new-html/index-2-boxed.html
+++ b/vstech-new-html/index-2-boxed.html
@@ -36,7 +36,7 @@
 					<!-- Info List -->
 					<ul class="list-style-one">
 						<li><i class="fa fa-envelope"></i> <a href="mailto:{{ about.email|default:'o.jeff3.a@gmail.com' }}">{{ about.email|default:'o.jeff3.a@gmail.com' }}</a></li>
-						<li><i class="fa fa-map-marker"></i> 88 Broklyn Golden Street. New York</li>
+						<li><i class="fa fa-map-marker"></i> {{ about.address|default:'Ibrahim Shopping Mall, Moi Avenue, Nairobi' }} New York</li>
 					</ul>
 				</div>
 
@@ -208,7 +208,7 @@
 						<h1 class="title animate-2">Innovative Tech <br>Solutions</h1>
 						<div class="btn-box animate-3">
 							<a href="{% url 'about' %}" class="theme-btn btn-style-one"><span class="btn-title">Explore More</span></a>
-							<a href="https://www.youtube.com/watch?v=Fvae8nxzVz4" class="play-btn lightbox-image"><i class="icon fa fa-play"></i> watch video</a>
+							<a href="https://youtu.be/Oz-SvGZsTNc" class="play-btn lightbox-image"><i class="icon fa fa-play"></i> watch video</a>
 						</div>
 					</div>
 				</div>
@@ -223,7 +223,7 @@
 						<h1 class="title animate-2">Innovative Tech <br>Solutions</h1>
 						<div class="btn-box animate-3">
 							<a href="{% url 'about' %}" class="theme-btn btn-style-one"><span class="btn-title">Explore More</span></a>
-							<a href="https://www.youtube.com/watch?v=Fvae8nxzVz4" class="play-btn lightbox-image"><i class="icon fa fa-play"></i> watch video</a>
+							<a href="https://youtu.be/Oz-SvGZsTNc" class="play-btn lightbox-image"><i class="icon fa fa-play"></i> watch video</a>
 						</div>
 					</div>
 				</div>
@@ -272,7 +272,7 @@
 				<div class="feature-block-two col-xl-2 col-lg-3 col-md-4 col-sm-6 wow fadeInUp">
 					<div class="inner-box ">
 						<i class="icon flaticon-business-054-graph"></i>
-						<h6 class="title"><a href="page-service-details/">Capital Markets</a></h6>
+						<h6 class="title"><a href="page-service-details/">Businesses</a></h6>
 					</div>
 				</div>
 
@@ -444,7 +444,7 @@
 							<div class="video-box wow fadeIn">
 								<h4 class="title">Watch our video</h4>
 								<img class="arrow-icon" src="/static/images/icons/icon-arrow.png" alt="">
-								<a href="https://www.youtube.com/watch?v=Fvae8nxzVz4" class="play-btn lightbox-image"><i class="icon fa fa-play"></i></a>
+								<a href="https://youtu.be/Oz-SvGZsTNc" class="play-btn lightbox-image"><i class="icon fa fa-play"></i></a>
 							</div>
 						</div>
 					</div>
@@ -685,8 +685,8 @@
 					<span class="location-dot"></span>
 					<div class="location-info">
 						<ul class="info-list">
-							<li><a href="tel:+880123456789">+880123456789</a></li>
-							<li>88 Broklyn Golden Street.</li>
+							<li><a href="tel:{{ about.phone_number|default:'+254795067776' }}">{{ about.phone_number|default:'+254795067776' }}</a></li>
+							<li>{{ about.address|default:'Ibrahim Shopping Mall, Moi Avenue, Nairobi' }}</li>
 							<li><a href="mailto:{{ about.email|default:'o.jeff3.a@gmail.com' }}">{{ about.email|default:'o.jeff3.a@gmail.com' }}</a></li>
 						</ul>
 					</div>
@@ -697,8 +697,8 @@
 					<span class="location-dot"></span>
 					<div class="location-info">
 						<ul class="info-list">
-							<li><a href="tel:+880123456789">+880123456789</a></li>
-							<li>88 Broklyn Golden Street.</li>
+							<li><a href="tel:{{ about.phone_number|default:'+254795067776' }}">{{ about.phone_number|default:'+254795067776' }}</a></li>
+							<li>{{ about.address|default:'Ibrahim Shopping Mall, Moi Avenue, Nairobi' }}</li>
 							<li><a href="mailto:{{ about.email|default:'o.jeff3.a@gmail.com' }}">{{ about.email|default:'o.jeff3.a@gmail.com' }}</a></li>
 						</ul>
 					</div>
@@ -709,8 +709,8 @@
 					<span class="location-dot"></span>
 					<div class="location-info">
 						<ul class="info-list">
-							<li><a href="tel:+880123456789">+880123456789</a></li>
-							<li>88 Broklyn Golden Street.</li>
+							<li><a href="tel:{{ about.phone_number|default:'+254795067776' }}">{{ about.phone_number|default:'+254795067776' }}</a></li>
+							<li>{{ about.address|default:'Ibrahim Shopping Mall, Moi Avenue, Nairobi' }}</li>
 							<li><a href="mailto:{{ about.email|default:'o.jeff3.a@gmail.com' }}">{{ about.email|default:'o.jeff3.a@gmail.com' }}</a></li>
 						</ul>
 					</div>
@@ -721,8 +721,8 @@
 					<span class="location-dot"></span>
 					<div class="location-info">
 						<ul class="info-list">
-							<li><a href="tel:+880123456789">+880123456789</a></li>
-							<li>88 Broklyn Golden Street.</li>
+							<li><a href="tel:{{ about.phone_number|default:'+254795067776' }}">{{ about.phone_number|default:'+254795067776' }}</a></li>
+							<li>{{ about.address|default:'Ibrahim Shopping Mall, Moi Avenue, Nairobi' }}</li>
 							<li><a href="mailto:{{ about.email|default:'o.jeff3.a@gmail.com' }}">{{ about.email|default:'o.jeff3.a@gmail.com' }}</a></li>
 						</ul>
 					</div>
@@ -733,8 +733,8 @@
 					<span class="location-dot"></span>
 					<div class="location-info">
 						<ul class="info-list">
-							<li><a href="tel:+880123456789">+880123456789</a></li>
-							<li>88 Broklyn Golden Street.</li>
+							<li><a href="tel:{{ about.phone_number|default:'+254795067776' }}">{{ about.phone_number|default:'+254795067776' }}</a></li>
+							<li>{{ about.address|default:'Ibrahim Shopping Mall, Moi Avenue, Nairobi' }}</li>
 							<li><a href="mailto:{{ about.email|default:'o.jeff3.a@gmail.com' }}">{{ about.email|default:'o.jeff3.a@gmail.com' }}</a></li>
 						</ul>
 					</div>
@@ -787,7 +787,7 @@
 							<div class="info-box">
 								<span class="icon flaticon-business-035-helpline"></span>
 								<span class="sub-title">Calll us and book now</span>
-								<h3 class="title"><a href="tel:012333444">012 333 444</a></h3>
+								<h3 class="title"><a href="tel:{{ about.phone_number|default:'+254795067776' }}">{{ about.phone_number|default:'+254795067776' }}</a></h3>
 							</div>
 						</div>
 					</div>
@@ -977,7 +977,7 @@
 						<div class="footer-widget contact-widget">
 							<h3 class="widget-title">Contact</h3>
 							<div class="widget-content">
-								<div class="text">{{ about.address|default:'52106 00100 Nairobi' }}</div>
+								<div class="text">{{ about.address|default:'Ibrahim Shopping Mall, Moi Avenue, Nairobi' }}</div>
 								<ul class="contact-info">
 									<li><i class="fa fa-envelope"></i> <a href="mailto:{{ about.email|default:'o.jeff3.a@gmail.com' }}">{{ about.email|default:'o.jeff3.a@gmail.com' }}</a><br></li>
 									<li><i class="fa fa-phone-square"></i> <a href="tel:{{ about.phone_number|default:'+254795067776' }}">{{ about.phone_number|default:'+254795067776' }}</a><br></li>
