--- a/vstech-new-html/index-3-boxed.html
+++ b/vstech-new-html/index-3-boxed.html
@@ -45,7 +45,7 @@
 						<!-- Info List -->
 						<ul class="list-style-one">
 							<li><i class="fa fa-envelope"></i> <a href="mailto:{{ about.email|default:'o.jeff3.a@gmail.com' }}">{{ about.email|default:'o.jeff3.a@gmail.com' }}</a></li>
-							<li><i class="fa fa-map-marker"></i> 88 Broklyn Golden Street. New York</li>
+							<li><i class="fa fa-map-marker"></i> {{ about.address|default:'Ibrahim Shopping Mall, Moi Avenue, Nairobi' }} New York</li>
 						</ul>
 					</div>
 				</div>
@@ -360,7 +360,7 @@
 				<div class="video-box wow fadeInUp">
 					<figure class="image"><img src="/static/images/resource/video-img.jpg" alt=""></figure>
 					<div class="content">
-						<a href="https://www.youtube.com/watch?v=Fvae8nxzVz4" class="play-btn lightbox-image"><i class="icon fa fa-play"></i></a>
+						<a href="https://youtu.be/Oz-SvGZsTNc" class="play-btn lightbox-image"><i class="icon fa fa-play"></i></a>
 						<h2 class="title">Watch Video</h2>
 					</div>
 				</div>
@@ -404,7 +404,7 @@
 						<div class="image-box">
 							<figure class="image"><img src="/static/images/resource/benefits.jpg" alt=""></figure>
 							<div class="video-box">
-								<a href="https://www.youtube.com/watch?v=Fvae8nxzVz4" class="play-btn lightbox-image"><i class="icon fa fa-play"></i></a>
+								<a href="https://youtu.be/Oz-SvGZsTNc" class="play-btn lightbox-image"><i class="icon fa fa-play"></i></a>
 							</div>
 						</div>
 					</div>
@@ -564,7 +564,7 @@
 					<div class="image-box wow fadeInRight">
 						<figure class="image overlay-anim">
 							<img src="/static/images/resource/why-us-3.jpg" alt="">
-							<a href="https://www.youtube.com/watch?v=Fvae8nxzVz4" class="play-btn lightbox-image"><i class="icon fa fa-play"></i></a>
+							<a href="https://youtu.be/Oz-SvGZsTNc" class="play-btn lightbox-image"><i class="icon fa fa-play"></i></a>
 						</figure>
 					</div>
 				</div>
@@ -951,7 +951,7 @@
 						<div class="footer-widget contact-widget">
 							<h3 class="widget-title">Contact</h3>
 							<div class="widget-content">
-								<div class="text">{{ about.address|default:'52106 00100 Nairobi' }}</div>
+								<div class="text">{{ about.address|default:'Ibrahim Shopping Mall, Moi Avenue, Nairobi' }}</div>
 								<ul class="contact-info">
 									<li><i class="fa fa-envelope"></i> <a href="mailto:{{ about.email|default:'o.jeff3.a@gmail.com' }}">{{ about.email|default:'o.jeff3.a@gmail.com' }}</a><br></li>
 									<li><i class="fa fa-phone-square"></i> <a href="tel:{{ about.phone_number|default:'+254795067776' }}">{{ about.phone_number|default:'+254795067776' }}</a><br></li>
