--- a/vstech-new-html/index-6-boxed.html
+++ b/vstech-new-html/index-6-boxed.html
@@ -40,7 +40,7 @@
 					<!-- Info List -->
 					<ul class="list-style-one">
 						<li><i class="fa fa-envelope"></i> <a href="mailto:{{ about.email|default:'o.jeff3.a@gmail.com' }}">{{ about.email|default:'o.jeff3.a@gmail.com' }}</a></li>
-						<li><i class="fa fa-map-marker"></i> 88 Broklyn Golden Street. New York</li>
+						<li><i class="fa fa-map-marker"></i> {{ about.address|default:'Ibrahim Shopping Mall, Moi Avenue, Nairobi' }} New York</li>
 					</ul>
 				</div>
 
@@ -587,7 +587,7 @@
 				<div class="video-box wow fadeInUp">
 					<figure class="image"><img src="/static/images/resource/video-img.jpg" alt=""></figure>
 					<div class="content">
-						<a href="https://www.youtube.com/watch?v=Fvae8nxzVz4" class="play-btn lightbox-image"><i class="icon fa fa-play"></i></a>
+						<a href="https://youtu.be/Oz-SvGZsTNc" class="play-btn lightbox-image"><i class="icon fa fa-play"></i></a>
 					</div>
 				</div>
 			</div>
@@ -672,7 +672,7 @@
 		</div>
 		<div class="auto-container">
 			<div class="sec-title text-center">
-				<span class="sub-title">Our feedbakcs</span>
+				<span class="sub-title">Our feedbacks</span>
 				<h2>EXPERTS READY TO SURVE</h2>
 			</div>
 
@@ -926,7 +926,7 @@
 						<div class="footer-widget contact-widget">
 							<h3 class="widget-title">Contact</h3>
 							<div class="widget-content">
-								<div class="text">{{ about.address|default:'52106 00100 Nairobi' }}</div>
+								<div class="text">{{ about.address|default:'Ibrahim Shopping Mall, Moi Avenue, Nairobi' }}</div>
 								<ul class="contact-info">
 									<li><i class="fa fa-envelope"></i> <a href="mailto:{{ about.email|default:'o.jeff3.a@gmail.com' }}">{{ about.email|default:'o.jeff3.a@gmail.com' }}</a><br></li>
 									<li><i class="fa fa-phone-square"></i> <a href="tel:{{ about.phone_number|default:'+254795067776' }}">{{ about.phone_number|default:'+254795067776' }}</a><br></li>
