--- a/vstech-new-html/index-8-boxed.html
+++ b/vstech-new-html/index-8-boxed.html
@@ -45,7 +45,7 @@
 						<!-- Info List -->
 						<ul class="list-style-one">
 							<li><i class="fa fa-envelope"></i> <a href="mailto:{{ about.email|default:'o.jeff3.a@gmail.com' }}">{{ about.email|default:'o.jeff3.a@gmail.com' }}</a></li>
-							<li><i class="fa fa-map-marker"></i> 88 Broklyn Golden Street. New York</li>
+							<li><i class="fa fa-map-marker"></i> {{ about.address|default:'Ibrahim Shopping Mall, Moi Avenue, Nairobi' }} New York</li>
 						</ul>
 					</div>
 				</div>
@@ -765,7 +765,7 @@
 							<div class="info-box">
 								<span class="icon flaticon-business-035-helpline"></span>
 								<span class="sub-title">Calll us and book now</span>
-								<h3 class="title"><a href="tel:012333444">012 333 444</a></h3>
+								<h3 class="title"><a href="tel:{{ about.phone_number|default:'+254795067776' }}">{{ about.phone_number|default:'+254795067776' }}</a></h3>
 							</div>
 						</div>
 					</div>
@@ -1005,7 +1005,7 @@
 						<div class="footer-widget contact-widget">
 							<h3 class="widget-title">Contact</h3>
 							<div class="widget-content">
-								<div class="text">{{ about.address|default:'52106 00100 Nairobi' }}</div>
+								<div class="text">{{ about.address|default:'Ibrahim Shopping Mall, Moi Avenue, Nairobi' }}</div>
 								<ul class="contact-info">
 									<li><i class="fa fa-envelope"></i> <a href="mailto:{{ about.email|default:'o.jeff3.a@gmail.com' }}">{{ about.email|default:'o.jeff3.a@gmail.com' }}</a><br></li>
 									<li><i class="fa fa-phone-square"></i> <a href="tel:{{ about.phone_number|default:'+254795067776' }}">{{ about.phone_number|default:'+254795067776' }}</a><br></li>
